# smartMed

./: pyproject.toml
src/smartmed/: app.py  cv.py  dev.py  main.py
src/smartmed/templates/: index.html
